列文字 靠左

--- a/Views/Order/DomesticKnot_List.cshtml
+++ b/Views/Order/DomesticKnot_List.cshtml
@@ -29,10 +29,10 @@
                     <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
                     <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
                     <th data-options="field:'text',sortable:true">备注</th>
-                    <th data-options="field:'test',sortable:true">OPS接单时间</th>
-                    <th data-options="field:'test',sortable:true">OPS接单人</th>
-                    <th data-options="field:'test',sortable:true">关务接单时间</th>
-                    <th data-options="field:'test',sortable:true">关务接单人</th>
+                    <th data-options="field:'text',sortable:true">OPS接单时间</th>
+                    <th data-options="field:'text',sortable:true">OPS接单人</th>
+                    <th data-options="field:'text',sortable:true">关务接单时间</th>
+                    <th data-options="field:'text',sortable:true">关务接单人</th>
                     <th data-options="field:'GUOJITIME',sortable:true">过机时间</th>
                     <th data-options="field:'GUOJIUSERNAME',sortable:true">过机人</th>
                     <th data-options="field:'LIDANTIME',sortable:true">理单时间</th>
@@ -53,11 +53,11 @@
                     <th data-options="field:'text',sortable:true">出单日期</th>
                     <th data-options="field:'text',sortable:true">报关方式</th>
                     <th data-options="field:'text',sortable:true">海关通关状态</th>
-                    <th data-options="field:'test',sortable:true">签收号</th>
-                    <th data-options="field:'test',sortable:true">签收人</th>
-                    <th data-options="field:'test',sortable:true">签收日期</th>
-                    <th data-options="field:'test',sortable:true">报关资料齐全标志</th>
-                    <th data-options="field:'test',sortable:true">文档类别</th>
+                    <th data-options="field:'text',sortable:true">签收号</th>
+                    <th data-options="field:'text',sortable:true">签收人</th>
+                    <th data-options="field:'text',sortable:true">签收日期</th>
+                    <th data-options="field:'text',sortable:true">报关资料齐全标志</th>
+                    <th data-options="field:'text',sortable:true">文档类别</th>
                 </tr>
             </thead>
         </table>
