--- a/Views/Order/SpecialSupervision_List.cshtml
+++ b/Views/Order/SpecialSupervision_List.cshtml
@@ -12,46 +12,46 @@
             <thead>
                 <tr>
                     <th data-options="field: 'ck', checkbox: true"></th>
-                    <th data-options="field:'CODE',width:140,sortable:true,align:'center'">业务编号</th>
-                    <th data-options="field:'test',width:140,sortable:true,align:'center'">关务编号</th>
-                    <th data-options="field:'ASSOCIATEPEDECLNO',width:140,align:'center',sortable:true">报关单号</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',width:140,sortable:true,align:'center'">实物放行时间</th>
-                    <th data-options="field:'text',width:100,sortable:true,align:'center'">关务状态</th>
-                    <th data-options="field:'BUSITYPE',width:100,sortable:true,align:'center'">业务类型</th>
-                    <th data-options="field:'BUSIUNITNAME',width:200,sortable:true,align:'center'">企业</th>
-                    <th data-options="field:'CONTRACTNO',width:100,sortable:true,align:'center'">合同/发票号</th>
-                    <th data-options="field:'DECLSHEETNUM',width:70,sortable:true,align:'center'">报关单张数</th>
-                    <th data-options="field:'GOODSNUM',width:50,sortable:true,align:'center'">总件数</th>
-                    <th data-options="field:'GOODSWEIGHT',width:50,sortable:true,align:'center'">总重量</th>
-                    <th data-options="field:'text',width:50,sortable:true,align:'center'">备注</th>
-                    <th data-options="field:'test',width:100,align:'center'">OPS接单人</th>
-                    <th data-options="field:'test',width:100,align:'center'">关务接单人</th>
-                    <th data-options="field:'GUOJITIME',width:200,sortable:true,align:'center'">过机时间</th>
-                    <th data-options="field:'GUOJIUSERNAME',width:100,align:'center'">过机人</th>
-                    <th data-options="field:'LIDANTIME',width:200,sortable:true,align:'center'">理单时间</th>
-                    <th data-options="field:'LIDANUSERNAME',width:100,align:'center'">理单人</th>
-                    <th data-options="field:'LIHUOZILIAOTIME',width:200,sortable:true,align:'center'">理单资料时间</th>
-                    <th data-options="field:'LIHUOZILIAOUSERNAME',width:100,align:'center'">理单资料人</th>
-                    <th data-options="field:'BAOGUANTIME',width:200,sortable:true,align:'center'">报关时间</th>
-                    <th data-options="field:'BAOGUANUSERNAME',width:100,align:'center'">报关人</th>
-                    <th data-options="field:'DANZHENGFANGXINGTIME',width:200,sortable:true,align:'center'">单证放行时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:100,align:'center'">单证放行人</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',width:200,sortable:true,align:'center'">实物放行时间</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,align:'center'">实物放行人</th>
-                    <th data-options="field:'CUSTOMDISTRICTCODE',width:100,align:'center'">申报关区</th>
-                    <th data-options="field:'text',width:200,sortable:true,align:'center'">OPS接单时间</th>
-                    <th data-options="field:'text',width:200,sortable:true,align:'center'">关务接单时间</th>
-                    <th data-options="field:'text',width:80,align:'center'">打印状态</th>
-                    <th data-options="field:'text',width:80,align:'center'">急货标识</th>
-                    <th data-options="field:'text',width:200,sortable:true,align:'center'">出单日期</th>
-                    <th data-options="field:'INOUTTYPE',width:80,align:'center'">进出口类型</th>
-                    <th data-options="field:'text',width:120,align:'center'">海关通关状态</th>
-                    <th data-options="field:'REPWAYID',width:80,align:'center'">申报方式</th>
-                    <th data-options="field:'test',width:100,align:'center'">签收号</th>
-                    <th data-options="field:'test',width:100,align:'center'">签收人</th>
-                    <th data-options="field:'test',width:100,align:'center'">签收日期</th>
-                    <th data-options="field:'test',width:100,align:'center'">报关资料齐全标志</th>
-                    <th data-options="field:'test',width:100,align:'center'">文档类别</th>
+                    <th data-options="field:'CODE',sortable:true">业务编号</th>
+                    <th data-options="field:'text',sortable:true">关务编号</th>
+                    <th data-options="field:'ASSOCIATEPEDECLNO',sortable:true">报关单号</th>
+                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
+                    <th data-options="field:'text',sortable:true">关务状态</th>
+                    <th data-options="field:'BUSITYPE',sortable:true">业务类型</th>
+                    <th data-options="field:'BUSIUNITNAME',sortable:true">企业</th>
+                    <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
+                    <th data-options="field:'DECLSHEETNUM',sortable:true">报关单张数</th>
+                    <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
+                    <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
+                    <th data-options="field:'text',sortable:true">备注</th>
+                    <th data-options="field:'text',sortable:true">OPS接单人</th>
+                    <th data-options="field:'text',sortable:true">关务接单人</th>
+                    <th data-options="field:'GUOJITIME',sortable:true">过机时间</th>
+                    <th data-options="field:'GUOJIUSERNAME',sortable:true">过机人</th>
+                    <th data-options="field:'LIDANTIME',sortable:true">理单时间</th>
+                    <th data-options="field:'LIDANUSERNAME',sortable:true">理单人</th>
+                    <th data-options="field:'LIHUOZILIAOTIME',sortable:true">理单资料时间</th>
+                    <th data-options="field:'LIHUOZILIAOUSERNAME',sortable:true">理单资料人</th>
+                    <th data-options="field:'BAOGUANTIME',sortable:true">报关时间</th>
+                    <th data-options="field:'BAOGUANUSERNAME',sortable:true">报关人</th>
+                    <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
+                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
+                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME'">实物放行人</th>
+                    <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">申报关区</th>
+                    <th data-options="field:'text',sortable:true">OPS接单时间</th>
+                    <th data-options="field:'text',sortable:true">关务接单时间</th>
+                    <th data-options="field:'text',sortable:true">打印状态</th>
+                    <th data-options="field:'text',sortable:true">急货标识</th>
+                    <th data-options="field:'text',sortable:true">出单日期</th>
+                    <th data-options="field:'INOUTTYPE',sortable:true">进出口类型</th>
+                    <th data-options="field:'text',sortable:true">海关通关状态</th>
+                    <th data-options="field:'REPWAYID',sortable:true">申报方式</th>
+                    <th data-options="field:'text',sortable:true">签收号</th>
+                    <th data-options="field:'text',sortable:true">签收人</th>
+                    <th data-options="field:'text',sortable:true">签收日期</th>
+                    <th data-options="field:'text',sortable:true">报关资料齐全标志</th>
+                    <th data-options="field:'text',sortable:true">文档类别</th>
                 </tr>
             </thead>
         </table>
