--- a/Views/Order/AirIn_List.cshtml
+++ b/Views/Order/AirIn_List.cshtml
@@ -28,30 +28,30 @@
                     <th data-options="field:'BAOGUANTIME',sortable:true">报关时间</th>
                     <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
                     <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
-                    <th data-options="field:'test',sortable:true">报关备注</th>
+                    <th data-options="field:'text',sortable:true">报关备注</th>
                     <th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
                     <th data-options="field:'LIDANUSERNAME',sortable:true">理单人</th>
-                    <th data-options="field:'test',sortable:true">单证齐全时间</th>
+                    <th data-options="field:'text',sortable:true">单证齐全时间</th>
                     <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
                     <th data-options="field:'STATUS',sortable:true">实物放行状态</th>
                     <th data-options="field:'YWBH',sortable:true">业务编号</th>
                     <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
                     <th data-options="field:'TURNPRENO',sortable:true">转关转录单号</th>
-                    <th data-options="field:'test',sortable:true">转关号</th>
-                    <th data-options="field:'test',sortable:true">OPS接单备注</th>
+                    <th data-options="field:'text',sortable:true">转关号</th>
+                    <th data-options="field:'text',sortable:true">OPS接单备注</th>
                     <th data-options="field:'ZUOYEDANTIME',sortable:true">作业单时间</th>
-                    <th data-options="field:'test',sortable:true">普货</th>
-                    <th data-options="field:'test',sortable:true">快件</th>
+                    <th data-options="field:'text',sortable:true">普货</th>
+                    <th data-options="field:'text',sortable:true">快件</th>
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
-                    <th data-options="field:'test',sortable:true">关务状态</th>
+                    <th data-options="field:'text',sortable:true">关务状态</th>
                     <th data-options="field:'PASSMODE',sortable:true">分批放行</th>
                     <th data-options="field:'PASSMODE',sortable:true">申请放行</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">关区代码</th>
-                    <th data-options="field:'test',sortable:true">海关通关状态</th>
-                    <th data-options="field:'test',sortable:true">签收号</th>
-                    <th data-options="field:'test',sortable:true">签收人</th>
-                    <th data-options="field:'test',sortable:true">签收日期</th>
+                    <th data-options="field:'text',sortable:true">海关通关状态</th>
+                    <th data-options="field:'text',sortable:true">签收号</th>
+                    <th data-options="field:'text',sortable:true">签收人</th>
+                    <th data-options="field:'text',sortable:true">签收日期</th>
                 </tr>
             </thead>
         </table>
