--- a/Views/Order/SeaIn_List.cshtml
+++ b/Views/Order/SeaIn_List.cshtml
@@ -31,49 +31,49 @@
                     <th data-options="field:'BAOGUANTIME',sortable:true">报关时间</th>
                     <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
                     <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
-                    <th data-options="field:'test',sortable:true">报关备注</th>
-                    <th data-options="field:'test',sortable:true">放行时间</th>
+                    <th data-options="field:'text',sortable:true">报关备注</th>
+                    <th data-options="field:'text',sortable:true">放行时间</th>
                     <th data-options="field:'LIDANUSERNAME',sortable:true">理单人</th>
-                    <th data-options="field:'test',sortable:true">单证齐全时间</th>
+                    <th data-options="field:'text',sortable:true">单证齐全时间</th>
                     <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
-                    <th data-options="field:'test',sortable:true">实物放行状态</th>
+                    <th data-options="field:'text',sortable:true">实物放行状态</th>
                     <th data-options="field:'YWBH',sortable:true">业务编号</th>
                     <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
                     <th data-options="field:'TURNPRENO',sortable:true">转关预录入号</th>
-                    <th data-options="field:'test',sortable:true">转关号</th>
+                    <th data-options="field:'text',sortable:true">转关号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">申报关区</th>
-                    <th data-options="field:'test',sortable:true">OPS接单备注</th>
-                    <th data-options="field:'test',sortable:true">是否有作业单齐全时间</th>
-                    <th data-options="field:'test',sortable:true">作业单齐全时间</th>
+                    <th data-options="field:'text',sortable:true">OPS接单备注</th>
+                    <th data-options="field:'text',sortable:true">是否有作业单齐全时间</th>
+                    <th data-options="field:'text',sortable:true">作业单齐全时间</th>
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
-                    <th data-options="field:'test',sortable:true">关务状态</th>
-                    <th data-options="field:'test',sortable:true">分批放行</th>
+                    <th data-options="field:'text',sortable:true">关务状态</th>
+                    <th data-options="field:'text',sortable:true">分批放行</th>
                     <th data-options="field:'PASSMODE',sortable:true">申请放行</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">关区代码</th>
-                    <th data-options="field:'test',sortable:true">平台编号</th>
-                    <th data-options="field:'test',sortable:true">关务编号</th>
+                    <th data-options="field:'text',sortable:true">平台编号</th>
+                    <th data-options="field:'text',sortable:true">关务编号</th>
                     <th data-options="field:'CLEARUNITNAME',sortable:true">结算方</th>
-                    <th data-options="field:'test',sortable:true">报检接单时间</th>
-                    <th data-options="field:'test',sortable:true">通关单标志</th>
-                    <th data-options="field:'test',sortable:true">报检标志</th>
-                    <th data-options="field:'test',sortable:true">制单备注</th>
+                    <th data-options="field:'text',sortable:true">报检接单时间</th>
+                    <th data-options="field:'text',sortable:true">通关单标志</th>
+                    <th data-options="field:'text',sortable:true">报检标志</th>
+                    <th data-options="field:'text',sortable:true">制单备注</th>
                     <th data-options="field:'GUOJIUSERNAME',sortable:true">过机人</th>
                     <th data-options="field:'BAOGUANUSERNAME',sortable:true">报关人</th>
-                    <th data-options="field:'test',sortable:true">手册在否</th>
-                    <th data-options="field:'test',sortable:true">手册号</th>
-                    <th data-options="field:'test',sortable:true">出保</th>
-                    <th data-options="field:'test',sortable:true">OPS接单人</th>
-                    <th data-options="field:'test',sortable:true">OPS接单时间</th>
-                    <th data-options="field:'test',sortable:true">出关封时间</th>
-                    <th data-options="field:'test',sortable:true">口岸放行时间</th>
-                    <th data-options="field:'test',sortable:true">口岸安排报关时间</th>
-                    <th data-options="field:'test',sortable:true">通关状态</th>
-                    <th data-options="field:'test',sortable:true">操作点</th>
-                    <th data-options="field:'test',sortable:true">海关通关状态</th>
-                    <th data-options="field:'test',sortable:true">签收号</th>
-                    <th data-options="field:'test',sortable:true">签收人</th>
-                    <th data-options="field:'test',sortable:true">签收日期</th>
+                    <th data-options="field:'text',sortable:true">手册在否</th>
+                    <th data-options="field:'text',sortable:true">手册号</th>
+                    <th data-options="field:'text',sortable:true">出保</th>
+                    <th data-options="field:'text',sortable:true">OPS接单人</th>
+                    <th data-options="field:'text',sortable:true">OPS接单时间</th>
+                    <th data-options="field:'text',sortable:true">出关封时间</th>
+                    <th data-options="field:'text',sortable:true">口岸放行时间</th>
+                    <th data-options="field:'text',sortable:true">口岸安排报关时间</th>
+                    <th data-options="field:'text',sortable:true">通关状态</th>
+                    <th data-options="field:'text',sortable:true">操作点</th>
+                    <th data-options="field:'text',sortable:true">海关通关状态</th>
+                    <th data-options="field:'text',sortable:true">签收号</th>
+                    <th data-options="field:'text',sortable:true">签收人</th>
+                    <th data-options="field:'text',sortable:true">签收日期</th>
                 </tr>
 
 
