--- a/Views/Order/SeaOut_List.cshtml
+++ b/Views/Order/SeaOut_List.cshtml
@@ -12,43 +12,43 @@
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ck', checkbox: true"></th>
-                    <th data-options="field:'CUSNO',width:200,sortable:true,align:'center'">收货人</th>
-                    <th data-options="field:'test',width:120,sortable:true,align:'center'">进舱编号</th>
-                    <th data-options="field:'GOODSNUM',width:80,align:'center',sortable:true">总件数</th>
-                    <th data-options="field:'GOODSWEIGHT',width:70,sortable:true,align:'center'">总重量</th>
+                    <th data-options="field:'CUSNO',sortable:true">收货人</th>
+                    <th data-options="field:'text',sortable:true">进舱编号</th>
+                    <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
+                    <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
                 </tr>
             </thead>
 
             <thead>
 
                 <tr>
-                    <th data-options="field:'DECLSHEETNUM',width:80,align:'center',sortable:true">报关单张数</th>
-                    <th data-options="field:'LAWCONDITION',width:80,sortable:true,align:'center'">是否法检</th>
-                    <th data-options="field:'ASSOCIATEPEDECLNO',width:120,sortable:true,align:'center'">报关单号</th>
-                    <th data-options="field:'LIDANTIME',width:100,align:'center'">理单时间</th>
-                    <th data-options="field:'BAOGUANTIME',width:100,align:'center'">报关时间</th>
-                    <th data-options="field:'SHIWUJIAFENGTIME',width:100,align:'center'">实物加封时间</th>
-                    <th data-options="field:'ASSOCIATETRADEWAY',width:100,align:'center'">贸易方式</th>
-                    <th data-options="field:'attr1',width:100,align:'center'">报关备注</th>
-                    <th data-options="field:'attr1',width:100,align:'center'">单证齐全时间</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',width:100,sortable:true,align:'center'">实物放行时间</th>
-                    <th data-options="field:'attr1',width:100,sortable:true,align:'center'">实物放行状态</th>
-                    <th data-options="field:'attr1',width:100,align:'center'">理单人</th>
-                    <th data-options="field:'YWBH',width:100,sortable:true">业务编号</th>
-                    <th data-options="field:'CONTRACTNO',width:100,sortable:true">合同/发票号</th>
-                    <th data-options="field:'TURNPRENO',width:70,sortable:true">转关预录入号</th>
-                    <th data-options="field:'attr1',width:100">作业单时间</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100">实物放行人</th>
-                    <th data-options="field:'attr1',width:100">关务状态</th>
-                    <th data-options="field:'attr1',width:100">关务代码</th>
-                    <th data-options="field:'attr1',width:100">通关状态</th>
-                    <th data-options="field:'attr1',width:100">OPS接单人</th>
-                    <th data-options="field:'attr1',width:100">OPS接单时间</th>
-                    <th data-options="field:'attr1',width:70">OPS接单备注</th>
-                    <th data-options="field:'attr1',width:100">海关通关状态</th>
-                    <th data-options="field:'attr1',width:100">签收号</th>
-                    <th data-options="field:'attr1',width:100">签收人</th>
-                    <th data-options="field:'attr1',width:100">签收日期</th>
+                    <th data-options="field:'DECLSHEETNUM',sortable:true">报关单张数</th>
+                    <th data-options="field:'LAWCONDITION',sortable:true">是否法检</th>
+                    <th data-options="field:'ASSOCIATEPEDECLNO',sortable:true">报关单号</th>
+                    <th data-options="field:'LIDANTIME',sortable:true">理单时间</th>
+                    <th data-options="field:'BAOGUANTIME',sortable:true">报关时间</th>
+                    <th data-options="field:'SHIWUJIAFENGTIME',sortable:true">实物加封时间</th>
+                    <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
+                    <th data-options="field:'text',sortable:true">报关备注</th>
+                    <th data-options="field:'text',sortable:true">单证齐全时间</th>
+                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
+                    <th data-options="field:'text',sortable:true">实物放行状态</th>
+                    <th data-options="field:'text',sortable:true">理单人</th>
+                    <th data-options="field:'YWBH',sortable:true">业务编号</th>
+                    <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
+                    <th data-options="field:'TURNPRENO',sortable:true">转关预录入号</th>
+                    <th data-options="field:'text',sortable:true">作业单时间</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
+                    <th data-options="field:'text',sortable:true">关务状态</th>
+                    <th data-options="field:'text',sortable:true">关务代码</th>
+                    <th data-options="field:'text',sortable:true">通关状态</th>
+                    <th data-options="field:'text',sortable:true">OPS接单人</th>
+                    <th data-options="field:'text',sortable:true">OPS接单时间</th>
+                    <th data-options="field:'text',sortable:true">OPS接单备注</th>
+                    <th data-options="field:'text',sortable:true">海关通关状态</th>
+                    <th data-options="field:'text',sortable:true">签收号</th>
+                    <th data-options="field:'text',sortable:true">签收人</th>
+                    <th data-options="field:'text',sortable:true">签收日期</th>
                 </tr>
 
 
