--- a/Views/Inspect/DomesticKnot_List.cshtml
+++ b/Views/Inspect/DomesticKnot_List.cshtml
@@ -1,9 +1,9 @@
-﻿ <div class="ibox-content">
+﻿<div class="ibox-content">
     <div class="table-responsive">
-        <table id="datagrid" class="easyui-datagrid" title="叠加保税" style="height:auto;min-height:500px;max-height:800px"
+        <table id="datagrid" class="easyui-datagrid" title="国内结转" style="height:auto;min-height:500px;max-height:800px"
                data-options=" rownumbers:true,
                                    url: '/Order/GetData',
-                                   queryParams:{TYPE:'OverlayBonded'},
+                                   queryParams:{TYPE:'DomesticKnot'},
                                    dataType : 'json',
                                    method:'get',
                                    toolbar:'#tb',
@@ -13,17 +13,17 @@
                 <tr>
                     <th data-options="field: 'ck', checkbox: true"></th>
                     <th data-options="field:'CODE',sortable:true">业务编号</th>
-                    <th data-options="field:'text',sortable:true">关务编号</th>
                     <th data-options="field:'ASSOCIATEPEDECLNO',sortable:true">报关单号</th>
                     <th data-options="field:'text',sortable:true">关务状态</th>
-                    <th data-options="field:'text',sortable:true">转入出类别</th>
+                    <th data-options="field:'text',sortable:true">业务类型</th>
+                    <th data-options="field:'BUSIUNITNAME',sortable:true">企业</th>
+                    <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
+                    @*<th data-options="field:'text',sortable:true">转入出类别</th>
                     <th data-options="field:'BUSITYPE',sortable:true">进出口类别</th>
                     <th data-options="field:'CORRESPONDNO',sortable:true">对应号</th>
                     <th data-options="field:'text',sortable:true">出口业务方式</th>
-                    <th data-options="field:'BUSIUNITNAME',sortable:true">企业</th>
-                    <th data-options="field:'text',sortable:true">手册号</th>
-                    <th data-options="field:'text',sortable:true">核销单号</th>
-                    <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
+                    <th data-options="field:'text'">手册号</th>
+                    <th data-options="field:'text'">核销单号</th>*@
                     <th data-options="field:'DECLSHEETNUM',sortable:true">报关单张数</th>
                     <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
                     <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
@@ -46,6 +46,9 @@
                     <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">申报关区</th>
+                    <th data-options="field:'text',sortable:true">打印状态</th>
+                    <th data-options="field:'text',sortable:true">报检状态</th>
+                    <th data-options="field:'text',sortable:true">关务编号</th>
                     <th data-options="field:'text',sortable:true">急货标识</th>
                     <th data-options="field:'text',sortable:true">出单日期</th>
                     <th data-options="field:'text',sortable:true">报关方式</th>
@@ -67,15 +70,6 @@
 
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
-                                    <option>转入出类型</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select class="easyui-combobox combobox_width value" id="out_in" panelheight="auto" name="out_in"></select>
-                            </td>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" panelheight="auto">
                                     <option>业务方式</option>
                                 </select>
                             </td>
@@ -89,6 +83,15 @@
                             <td>
                                 <input class="easyui-textbox value" type="text" name="ordercode_value" />
                             </td>
+
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-textbox value" type="text" name="oprname_value" />
+                            </td>
+
+
 
                             <td class="search_margin">
                                 <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
@@ -140,13 +143,6 @@
                         </tr>
 
                         <tr>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname"></select>
-                            </td>
-                            <td>
-                                <input class="easyui-textbox value" type="text" name="oprname_value" />
-                            </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
                                     <option>文档类型</option>
@@ -182,6 +178,7 @@
         </div>
 
     </div>
+ 
 </div>
 
 <script type="text/javascript">
@@ -191,8 +188,8 @@
                 var row = $('#datagrid').datagrid('getData').rows[index];
 
                 if (row.ID != "") {
-                    window.location.href = "/Order/OverlayBonded_Edit?ID=" + row.ID;
-                }  
+                    window.location.href = "/Inspect/DomesticKnot_Edit?ID=" + row.ID;
+                }
             }
         });
 </script>
