--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,40 +53,40 @@
                 </li>
                 @*@Html.Action("Header", "Common")/Common/ImportOrder?busitype=11*@
                 <li>
-                    <a href="#">关务操作</a>
+                    <a href="java:void(0)">关务操作</a>
                     <ul>
-                        <li><a href="/Order/AirIn_List">空运进口</a></li>
-                        <li><a href="/Order/AirOut_List">空运出口</a></li>
-                        <li><a href="/Order/LandIn_List">陆运进口</a></li>
-                        <li><a href="/Order/LandOut_List">陆运出口</a></li>
-                        <li><a href="/Order/SeaIn_List">海运进口</a></li>
-                        <li><a href="/Order/SeaOut_List">海运出口</a></li>
-                        <li><a href="/Order/DomesticKnot_List">国内结转</a></li>
-                        <li><a href="/Order/OverlayBonded_List">叠加保税</a></li>
-                        <li><a href="/Order/SpecialSupervision_List">特殊监管</a></li>
+                        <li><a href="/Declare/AirIn_List">空运进口</a></li>
+                        <li><a href="/Declare/AirOut_List">空运出口</a></li>
+                        <li><a href="/Declare/LandIn_List">陆运进口</a></li>
+                        <li><a href="/Declare/LandOut_List">陆运出口</a></li>
+                        <li><a href="/Declare/SeaIn_List">海运进口</a></li>
+                        <li><a href="/Declare/SeaOut_List">海运出口</a></li>
+                        <li><a href="/Declare/DomesticKnot_List">国内结转</a></li>
+                        <li><a href="/Declare/OverlayBonded_List">叠加保税</a></li>
+                        <li><a href="/Declare/SpecialSupervision_List">特殊监管</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">报检操作</a>
+                    <a href="java:void(0)">报检操作</a>
                     <ul>
-                        <li><a href="#">空运进口</a></li>
-                        <li><a href="#">空运出口</a></li>
-                        <li><a href="#">陆运进口</a></li>
-                        <li><a href="#">陆运出口</a></li>
-                        <li><a href="#">海运进口</a></li>
-                        <li><a href="#">海运出口</a></li>
-                        <li><a href="#">国内业务</a></li>
+                        <li><a href="/Inspect/AirIn_List">空运进口</a></li>
+                        <li><a href="/Inspect/AirOut_List">空运出口</a></li>
+                        <li><a href="/Inspect/LandIn_List">陆运进口</a></li>
+                        <li><a href="/Inspect/LandOut_List">陆运出口</a></li>
+                        <li><a href="/Inspect/SeaIn_List">海运进口</a></li>
+                        <li><a href="/Inspect/SeaOut_List">海运出口</a></li>
+                        <li><a href="/Inspect/DomesticKnot_List">国内业务</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">退单管理</a>
+                    <a href="java:void(0)">退单管理</a>
                     <ul>
                         <li><a href="#">退单管理</a></li>
                         <li><a href="#">签收操作</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">后台管理</a>
+                    <a href="java:void(0)">后台管理</a>
                     <ul>
                         <li><a href="#">用户管理</a></li>
                         <li><a href="#">模块管理</a></li>
