--- a/Views/Inspect/SeaIn_List.cshtml
+++ b/Views/Inspect/SeaIn_List.cshtml
@@ -1,25 +1,28 @@
-﻿ <div class="ibox-content">
+﻿<div class="ibox-content">
     <div class="table-responsive">
-        <table id="datagrid" class="easyui-datagrid" title="空运进口" style="height:auto;min-height:500px;max-height:800px"
+        <table id="datagrid" class="easyui-datagrid" title="海运进口" style="height:auto;min-height:500px;max-height:800px"
                data-options=" rownumbers:true,
                                    url: '/Order/GetData',
-                                   queryParams:{BUSITYPE:11},
+                                   queryParams:{BUSITYPE:21},
                                    dataType : 'json',
                                    method:'get',
                                    toolbar:'#tb',
                                    pageSize:20,
                                    pagination:true ">
+
             <thead data-options="frozen:true">
                 <tr>
-                    <th data-options="field: 'ID',width:80,checkbox:true"></th>
-                    <th data-options="field:'BUSIUNITNAME',sortable:true,">收货人</th>
-                    <th data-options="field:'TOTALNO',sortable:true">总单号</th>
-                    <th data-options="field:'DIVIDENO',sortable:true">分单号</th>
+                    <th data-options="field: 'ck', checkbox: true"></th>
+                    <th data-options="field:'CUSNO',sortable:true">收货人</th>
+                    <th data-options="field:'FIRSTLADINGBILLNO',sortable:true">一程提运单号</th>
+                    <th data-options="field:'SECONDLADINGBILLNO',sortable:true">二程提运单号</th>
                     <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
                     <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
                 </tr>
             </thead>
+
             <thead>
+
                 <tr>
                     <th data-options="field:'DECLSHEETNUM',sortable:true">报关单张数</th>
                     <th data-options="field:'LAWCONDITION',sortable:true">是否法检</th>
@@ -29,30 +32,52 @@
                     <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
                     <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
                     <th data-options="field:'text',sortable:true">报关备注</th>
-                    <th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
+                    <th data-options="field:'text',sortable:true">放行时间</th>
                     <th data-options="field:'LIDANUSERNAME',sortable:true">理单人</th>
                     <th data-options="field:'text',sortable:true">单证齐全时间</th>
                     <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
-                    <th data-options="field:'STATUS',sortable:true">实物放行状态</th>
+                    <th data-options="field:'text',sortable:true">实物放行状态</th>
                     <th data-options="field:'YWBH',sortable:true">业务编号</th>
                     <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
-                    <th data-options="field:'TURNPRENO',sortable:true">转关转录单号</th>
+                    <th data-options="field:'TURNPRENO',sortable:true">转关预录入号</th>
                     <th data-options="field:'text',sortable:true">转关号</th>
+                    <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">申报关区</th>
                     <th data-options="field:'text',sortable:true">OPS接单备注</th>
-                    <th data-options="field:'ZUOYEDANTIME',sortable:true">作业单时间</th>
-                    <th data-options="field:'text',sortable:true">普货</th>
-                    <th data-options="field:'text',sortable:true">快件</th>
+                    <th data-options="field:'text',sortable:true">是否有作业单齐全时间</th>
+                    <th data-options="field:'text',sortable:true">作业单齐全时间</th>
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
                     <th data-options="field:'text',sortable:true">关务状态</th>
-                    <th data-options="field:'PASSMODE',sortable:true">分批放行</th>
+                    <th data-options="field:'text',sortable:true">分批放行</th>
                     <th data-options="field:'PASSMODE',sortable:true">申请放行</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">关区代码</th>
+                    <th data-options="field:'text',sortable:true">平台编号</th>
+                    <th data-options="field:'text',sortable:true">关务编号</th>
+                    <th data-options="field:'CLEARUNITNAME',sortable:true">结算方</th>
+                    <th data-options="field:'text',sortable:true">报检接单时间</th>
+                    <th data-options="field:'text',sortable:true">通关单标志</th>
+                    <th data-options="field:'text',sortable:true">报检标志</th>
+                    <th data-options="field:'text',sortable:true">制单备注</th>
+                    <th data-options="field:'GUOJIUSERNAME',sortable:true">过机人</th>
+                    <th data-options="field:'BAOGUANUSERNAME',sortable:true">报关人</th>
+                    <th data-options="field:'text',sortable:true">手册在否</th>
+                    <th data-options="field:'text',sortable:true">手册号</th>
+                    <th data-options="field:'text',sortable:true">出保</th>
+                    <th data-options="field:'text',sortable:true">OPS接单人</th>
+                    <th data-options="field:'text',sortable:true">OPS接单时间</th>
+                    <th data-options="field:'text',sortable:true">出关封时间</th>
+                    <th data-options="field:'text',sortable:true">口岸放行时间</th>
+                    <th data-options="field:'text',sortable:true">口岸安排报关时间</th>
+                    <th data-options="field:'text',sortable:true">通关状态</th>
+                    <th data-options="field:'text',sortable:true">操作点</th>
                     <th data-options="field:'text',sortable:true">海关通关状态</th>
                     <th data-options="field:'text',sortable:true">签收号</th>
                     <th data-options="field:'text',sortable:true">签收人</th>
                     <th data-options="field:'text',sortable:true">签收日期</th>
                 </tr>
+
+
+
             </thead>
         </table>
 
@@ -107,11 +132,11 @@
 
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
-                                    <option>是否单证放行</option>
+                                    <option>通关单标志</option>
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value is_check" panelheight="auto" name="is_clearance"></select>
+                                <select class="easyui-combobox combobox_width value is_check"  panelheight="auto" name="is_clearance"></select>
                             </td>
                         </tr>
 
@@ -122,7 +147,7 @@
             <div class="tb_but">
                 <div class="but_left">
                     @*<a class="btn btn-primary btn-xs" href="javascript:void(0)"><i class="icon-search"></i> 搜索</a>
-                        <a class="btn btn-primary btn-xs" href="javascript:void(0)"><i class="icon-refresh"></i> 重置</a>*@
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)"><i class="icon-refresh"></i> 重置</a>*@
                 </div>
                 <div class="but_right">
                     <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="search_form()"><i class="icon-search"></i> 搜索</a>
@@ -132,7 +157,6 @@
         </div>
 
     </div>
-    <!-- end ibox-content -->
 </div>
 
 <script type="text/javascript">
@@ -141,8 +165,10 @@
             onDblClickCell: function (index, field, value) {
                 var row = $('#datagrid').datagrid('getData').rows[index];
                 if (row.ID != "") {
-                    window.location.href = "/Order/AirIn_Edit?ID=" + row.ID;
+                    window.location.href = "/Inspect/SeaIn_Edit?ID=" + row.ID;
                 }
             }
         });
 </script>
+
+
