--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
                 <li class="active" data-slide-to="0" data-target="#carousel-595514">
                 </li>
                 <li data-slide-to="1" data-target="#carousel-595514">
-                </li> 
+                </li>
             </ol>
             <div class="carousel-inner">
                 <div class="item active">
@@ -21,36 +21,31 @@
                 </div>
                 <div class="item">
                     <img src="/Images/login02.jpg" alt="" />
-                </div> 
+                </div>
             </div>
         </div>
         <div style="border: 1px solid #363c64; float: right; width: 350px; padding: 50px 50px 42px 50px;">
-            <form action="/Account/DoLogin" method="post">
+            <form action="/Account/Login?ReturnUrl=@ViewBag.ReturnUrl" method="post">
                 <label for="user_name">登录名</label>
                 <div class="input-group" style="margin-bottom: 20px">
                     <span class="input-group-addon icon iconfont">&#xe605;</span>
                     @Html.TextBoxFor(u => u.NAME, new { @class = "form-control" })
-                    @*<input type="text" class="form-control" id="user_name" placeholder="请输入登录账号">*@
                 </div>
                 <label for="password">登录密码</label>
                 <div class="input-group">
                     <span class="input-group-addon icon iconfont">&#xe608;</span>
-                    @Html.TextBoxFor(u => u.PASSWORD, new { @class = "form-control" })
-                    @*<input type="password" class="form-control" id="password" placeholder='请输入登录密码'>*@
+                    @Html.PasswordFor(u => u.PASSWORD, new { @class = "form-control" })
                 </div>
-                <div style="height:35px">   <label style="color:red" id="validate"></label>  </div>
+                <div style="height:35px">
+                    <label style="color:red" id="validate">
+                        @Html.ValidationMessageFor(u => u.NAME)
+                        @Html.ValidationMessageFor(u => u.PASSWORD)
+                        @Html.ValidationMessage("ERROR")
+                    </label>
+                </div>
                 <button type="submit" id='btn_login' class="btn btn-primary btn-group-justified">登录</button>
             </form>
         </div>
     </div>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#btn_login').bind('click', function () { 
-            });
-            $("input").bind('focus', function () {
-                $("#validate").text("");
-            });
-        });
-    </script>
 
 </div>
