--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
                 </li>
             </ul>
         </div>
-
+        <div style="width: 100%; text-align: right; margin-top: 3px; margin-bottom: 3px; font-size: 12px; color: #357ebd">@ViewBag.navigator</div>
     </div>
     <div class="container" style="min-height:600px;">
         @RenderSection("featured", required: false)
