--- a/Views/Inspect/LandOut_Edit.cshtml
+++ b/Views/Inspect/LandOut_Edit.cshtml
@@ -226,24 +226,15 @@
             <tr>
                 <th data-options="field: 'ck', checkbox: true"></th>
                 <th data-options="field:'ID',sortable:true,width:50,align:'center'">ID</th>
-                <th data-options="field:'BUSIUNITNAME',sortable:true,width:200,align:'center'">报关单号</th>
-                <th data-options="field:'TOTALNO',width:100,align:'center'">报关张数</th>
-                <th data-options="field:'DIVIDENO',width:100,align:'center'">贸易方式</th>
+                <th data-options="field:'BUSIUNITNAME',sortable:true,width:200,align:'center'">预制报检单号</th>
+                <th data-options="field:'TOTALNO',width:100,align:'center'">通关单号</th>
+                <th data-options="field:'DIVIDENO',width:100,align:'center'">报检单号</th>
+                <th data-options="field:'DIVIDENO',width:100,align:'center'">通关单张数</th>
+                <th data-options="field:'DIVIDENO',width:100,align:'center'">核准单号</th>
                 <th data-options="field:'GOODSNUM',width:50,align:'center'">件数</th>
                 <th data-options="field:'GOODSWEIGHT',width:50,align:'center'">总重量</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">报关备注</th>
                 <th data-options="field:'LAWCONDITION',width:50,align:'center'">删单</th>
                 <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">改单次数</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">预知单号</th>
-                <th data-options="field:'DECLSHEETNUM',width:50,align:'center'">金额</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">代垫标志</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">垫税类型</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">手册号</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">手册状态</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">出保时间</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">QP关联字段</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">海关通关状态</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">抓取标志</th>
             </tr>
         </thead>
     </table>
