--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,27 +55,27 @@
                 <li>
                     <a href="java:void(0)">关务操作</a>
                     <ul>
-                        <li><a href="/Declare/AirIn_List"><i class=""></i> 空运进口</a></li>
-                        <li><a href="/Declare/AirOut_List">空运出口</a></li>
-                        <li><a href="/Declare/LandIn_List">陆运进口</a></li>
-                        <li><a href="/Declare/LandOut_List">陆运出口</a></li>
-                        <li><a href="/Declare/SeaIn_List">海运进口</a></li>
-                        <li><a href="/Declare/SeaOut_List">海运出口</a></li>
-                        <li><a href="/Declare/DomesticKnot_List">国内结转</a></li>
-                        <li><a href="/Declare/OverlayBonded_List">叠加保税</a></li>
+                        <li><a href="/Declare/AirIn_List"><i class="iconfont">&#xe616;</i> 空运进口</a></li>
+                        <li><a href="/Declare/AirOut_List"><i class="iconfont">&#xe616;</i> 空运出口</a></li>
+                        <li><a href="/Declare/LandIn_List"><i class="iconfont">&#xe618;</i> 陆运进口</a></li>
+                        <li><a href="/Declare/LandOut_List"><i class="iconfont">&#xe618;</i> 陆运出口</a></li>
+                        <li><a href="/Declare/SeaIn_List"><i class="iconfont">&#xe617;</i> 海运进口</a></li>
+                        <li><a href="/Declare/SeaOut_List"><i class="iconfont">&#xe617;</i> 海运出口</a></li>
+                        <li><a href="/Declare/DomesticKnot_List"><i class="iconfont">&#xe60e;</i> 国内结转</a></li>
+                        <li><a href="/Declare/OverlayBonded_List"><i class="iconfont">&#xe619;</i> 叠加保税</a></li>
                         <li><a href="/Declare/SpecialSupervision_List">特殊监管</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="java:void(0)">报检操作</a>
                     <ul>
-                        <li><a href="/Inspect/AirIn_List">空运进口</a></li>
-                        <li><a href="/Inspect/AirOut_List">空运出口</a></li>
-                        <li><a href="/Inspect/LandIn_List">陆运进口</a></li>
-                        <li><a href="/Inspect/LandOut_List">陆运出口</a></li>
-                        <li><a href="/Inspect/SeaIn_List">海运进口</a></li>
-                        <li><a href="/Inspect/SeaOut_List">海运出口</a></li>
-                        <li><a href="/Inspect/DomesticKnot_List">国内业务</a></li>
+                        <li><a href="/Inspect/AirIn_List"><i class="iconfont">&#xe616;</i> 空运进口</a></li>
+                        <li><a href="/Inspect/AirOut_List"><i class="iconfont">&#xe616;</i> 空运出口</a></li>
+                        <li><a href="/Inspect/LandIn_List"><i class="iconfont">&#xe618;</i> 陆运进口</a></li>
+                        <li><a href="/Inspect/LandOut_List"><i class="iconfont">&#xe618;</i> 陆运出口</a></li>
+                        <li><a href="/Inspect/SeaIn_List"><i class="iconfont">&#xe617;</i> 海运进口</a></li>
+                        <li><a href="/Inspect/SeaOut_List"><i class="iconfont">&#xe617;</i> 海运出口</a></li>
+                        <li><a href="/Inspect/DomesticKnot_List"><i class="iconfont">&#xe60e;</i> 国内业务</a></li>
                     </ul>
                 </li>
                 <li>
