--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                 </li>
                 @*@Html.Action("Header", "Common")/Common/ImportOrder?busitype=11*@
                 <li>
-                    <a href="java:void(0)">关务操作</a>
+                    <a href="javascript:void(0)">关务操作</a>
                     <ul>
                         <li><a href="/Declare/AirIn_List"><i class="iconfont">&#xe616;</i> 空运进口</a></li>
                         <li><a href="/Declare/AirOut_List"><i class="iconfont">&#xe616;</i> 空运出口</a></li>
@@ -67,7 +67,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="java:void(0)">报检操作</a>
+                    <a href="javascript:void(0)">报检操作</a>
                     <ul>
                         <li><a href="/Inspect/AirIn_List"><i class="iconfont">&#xe616;</i> 空运进口</a></li>
                         <li><a href="/Inspect/AirOut_List"><i class="iconfont">&#xe616;</i> 空运出口</a></li>
@@ -79,14 +79,14 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="java:void(0)">退单管理</a>
+                    <a href="javascript:void(0)">退单管理</a>
                     <ul>
                         <li><a href="#">退单管理</a></li>
                         <li><a href="#">签收操作</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="java:void(0)">后台管理</a>
+                    <a href="javascript:void(0)">后台管理</a>
                     <ul>
                         <li><a href="#">用户管理</a></li>
                         <li><a href="#">模块管理</a></li>
