--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                         <li><a href="/Declare/SeaOut_List"><i class="iconfont">&#xe617;</i> 海运出口</a></li>
                         <li><a href="/Declare/DomesticKnot_List"><i class="iconfont">&#xe60e;</i> 国内结转</a></li>
                         <li><a href="/Declare/OverlayBonded_List"><i class="iconfont">&#xe619;</i> 叠加保税</a></li>
-                        <li><a href="/Declare/SpecialSupervision_List">特殊监管</a></li>
+                        <li><a href="/Declare/SpecialSupervision_List"><i class="iconfont">&#xe61a;</i> 特殊监管</a></li>
                     </ul>
                 </li>
                 <li>
